# MLOps

./: README.md
00-Deployment-ML/: 05-deploy.ipynb  Dockerfile  Ping.py  predict.py  pyproject.toml  train.py
01-Intro/: read_parquet.ipynb
02-Experiment-Tracking/: duration_prediction.ipynb  mlflow.db  pyproject.toml
